# fuzztest

./: .bazelrc  .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  blob_file.cc  fuzztest_macros.cc  runtime.cc
bazel/: BUILD  antlr_cpp_runtime.BUILD  nlohmann_json.BUILD  setup_configs.sh
build_defs/: BUILD  cc_fuzztest_grammar_library.bzl
centipede/: .bazelrc  BUILD  CONTRIBUTING.md  README.md  USER_MIGRATION.md  analyze_corpora.cc  analyze_corpora.h  analyze_corpora_test.cc  binary_info.cc  binary_info.h  binary_info_test.cc  blob_file.cc  blob_file.h  blob_file_converter.cc  blob_file_test.cc  blob_sequence.cc  blob_sequence.h  blob_sequence_test.cc  byte_array_mutator.cc  byte_array_mutator.h  byte_array_mutator_test.cc  call_graph.cc  call_graph.h  call_graph_test.cc  callstack.h  callstack_test.cc  centipede.cc  centipede.h  centipede_binary_test.sh  centipede_callbacks.cc  centipede_callbacks.h  centipede_callbacks_test.cc  centipede_default_callbacks.cc  centipede_default_callbacks.h  centipede_flags.inc  centipede_interface.cc  centipede_interface.h  centipede_main.cc  centipede_test.cc  clang-flags.txt  (+206 more)
cmake/: AddFuzzTest.cmake  BuildDependencies.cmake  CMakeLists.txt.jinja  CompatibilityModeLinkLibFuzzer.cmake  FuzzTestFlagSetup.cmake  FuzzTestHelpers.cmake  generate_cmake_from_bazel.py
codelab/: .bazelrc  BUILD  CMakeLists.txt  MODULE.bazel  WORKSPACE  escaping.cc  escaping_test.cc
common/: BUILD  CMakeLists.txt  bazel.cc  bazel.h  blob_file.cc  blob_file.h  blob_file_test.cc  crashing_input_filename.cc  crashing_input_filename.h  crashing_input_filename_test.cc  defs.h  env_util.cc  env_util.h  hash.cc  hash.h  hash_test.cc  logging.h  remote_file.cc  remote_file.h  remote_file_oss.cc  sha1.cc  (+6 more)
domain_tests/: BUILD  CMakeLists.txt  aggregate_combinators_test.cc  arbitrary_domains_flatbuffers_test.cc  arbitrary_domains_protobuf_test.cc  arbitrary_domains_test.cc  bitgen_ref_domain_test.cc  container_combinators_test.cc  container_test.cc  domain_testing.h  enum_reflection_test.cc  in_grammar_domain_test.cc  in_regexp_domain_test.cc  map_filter_combinator_test.cc  misc_domains_test.cc  numeric_domains_test.cc  pointer_domains_test.cc  recursive_domains_test.cc  specific_value_domains_test.cc  string_domains_test.cc  traversal_context_test.cc
e2e_tests/: BUILD  CMakeLists.txt  benchmark_test.cc  compatibility_mode_test.cc  corpus_database_test.cc  functional_test.cc  test_binary_util.cc  test_binary_util.h
e2e_tests/testdata/: BUILD  CMakeLists.txt  domain_tests.cc  dynamically_registered_fuzz_tests.cc  fuzz_test_with_dynamic_seeds.cc  fuzz_tests_for_corpus_database_testing.cc  fuzz_tests_for_functional_testing.cc  fuzz_tests_for_microbenchmarking.cc  fuzz_tests_for_rpc_session_grpc_functional_testing.cc  fuzz_tests_using_googletest.cc  fuzz_tests_with_invalid_seeds.cc  fuzz_tests_with_proto_inputs.cc  llvm_fuzzer_with_custom_mutator.cc  unit_test_and_fuzz_tests.cc
e2e_tests/testdata/corpus_database/fuzz_tests_for_functional_testing.stripped/MySuite.CrashOnFailingTestInput/crashing/: crashing1-crash_sig-input_sig  crashing2  invalid-format  non_crashing
e2e_tests/testdata/corpus_database/fuzz_tests_for_functional_testing.stripped/MySuite.DetectRegressionAndCoverageInputs/coverage/: coverage1  coverage2
e2e_tests/testdata/corpus_database/fuzz_tests_for_functional_testing.stripped/MySuite.DetectRegressionAndCoverageInputs/regression/: regression1
fuzztest/: BUILD  CMakeLists.txt  domain.h  domain_core.h  flatbuffers.h  fuzzing_bit_gen.cc  fuzzing_bit_gen.h  fuzzing_bit_gen_test.cc  fuzztest.cc  fuzztest.h  fuzztest_gtest_main.cc  fuzztest_macros.cc  fuzztest_macros.h  fuzztest_macros_test.cc  googletest_adaptor.h  googletest_fixture_adapter.h  init_fuzztest.cc  init_fuzztest.h  llvm_fuzzer_main.cc  llvm_fuzzer_wrapper.cc
fuzztest/grammars/: BUILD  CMakeLists.txt  JSON.g4
fuzztest/internal/: BUILD  CMakeLists.txt  absl_domain.h  any.h  any_test.cc  bitmap.h  centipede_adaptor.cc  centipede_adaptor.h  compatibility_mode.cc  compatibility_mode.h  configuration.cc  configuration.h  configuration_test.cc  corpus_database.cc  corpus_database.h  coverage.cc  coverage.h  domain.h  enum_reflection.h  enum_reflection_test.cc  fixture_driver.cc  fixture_driver.h  fixture_driver_test.cc  fuzzing_bit_gen.cc  fuzzing_bit_gen.h  fuzzing_mock_stream.h  googletest_adaptor.cc  googletest_adaptor.h  grammar.cc  grammar.h  io.cc  io.h  io_test.cc  logging.cc  logging.h  meta.h  polymorphic_value.h  polymorphic_value_test.cc  printer.h  protobuf_domain.h  (+36 more)
fuzztest/internal/domains/: BUILD  CMakeLists.txt  absl_helpers.h  aggregate_of_impl.h  arbitrary_fundamental_impl.h  arbitrary_impl.h  bit_flag_combination_of_impl.h  bit_gen_ref.h  container_mutation_helpers.h  container_of_impl.h  domain.h  domain_base.cc  domain_base.h  domain_concept.h  domain_type_erasure.h  element_of_impl.h  enum_reflection.h  filter_impl.h  flat_map_impl.h  flatbuffers_domain_impl.cc  flatbuffers_domain_impl.h  in_grammar_impl.cc  in_grammar_impl.h  in_range_impl.h  in_regexp_impl.cc  in_regexp_impl.h  lazy.h  map_impl.h  mutation_metadata.h  mutation_options.h  one_of_impl.h  optional_of_impl.h  overlap_of_impl.h  protobuf_domain_impl.h  regexp_dfa.cc  regexp_dfa.h  rune.cc  serialization_helpers.h  smart_pointer_of_impl.h  traversal_context.h  (+6 more)
grammar_codegen/: BUILD  CMakeLists.txt  antlr_frontend.cc  antlr_frontend.h  backend.cc  backend.h  backend_test.cc  code_generation.cc  code_generation.h  code_generation_test.cc  grammar_info.h
grammar_codegen/generated_antlr_parser/: ANTLRv4Lexer.cpp  ANTLRv4Lexer.h  ANTLRv4Parser.cpp  ANTLRv4Parser.h  ANTLRv4ParserBaseListener.cpp  ANTLRv4ParserBaseListener.h  ANTLRv4ParserListener.cpp  ANTLRv4ParserListener.h  BUILD  CMakeLists.txt  README.md
grammar_codegen/testdata/: expected_json_grammar.h  expected_json_grammar_with_spaces.h
rust/: Cargo.toml  README.md
rust/impl/: Cargo.toml
rust/impl/src/: lib.rs
rust/src/: lib.rs
rust/tests/: macro_compiles.rs  trybuild.rs
(+147 files in other folders)
